conditional_routing.yaml
---
apiVersion:
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
  - match:               #conditional routing: based on end-user
    - headers:
        end-user:
          exact: jin
    - route:
      - destination:
            host: ratings
            subset: v1
      - destination:
            host: ratings
            subset: v2

---
apiVersion:
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
  - match:               #conditional routing: based on source labels
    - sourceLabels:
        app: reviews
        version: v2
    - route:
      - destination:
            host: ratings
            subset: v1
      - destination:
            host: ratings
            subset: v2
