retry_timeout_fault_injection.yaml
---
apiVersion:
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v1
        timeout: 8s           #default 10 seconds
        fault:                #fault injection - abort
          abort:
            percent: 10
            httpStatus: 400
      - destination:
          host: reviews
          subset: v2
        retries:              # attempts * perTryTimeout should be less than 10 seconds(default) or adjusted timeout.
          attempts: 3
          perTryTimeout: 2s
      fault:                  #fault injection - delay
        delay:
          percent: 10
          fixedDelay: 5s
