split_traffic_weighted_and_round_robin.yaml
---
apiVersion:
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:                  # default is round robin among all destinations
      - destination:
            host: reviews
            subset: v1
      - destination:
            host: reviews
            subset: v2

---
apiVersion:
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v1
        weight: 75            # split traffic. 75% to here
      - destination:
          host: reviews
          subset: v2
        weight: 25            # split traffic. 25% to here
