virtual_services.yml
---
apiVersion:
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
            host: reviews
            subset: v1
      - destination:
            host: reviews
            subset: v2
...

---
apiVersion:
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v1
        weight: 75
        timeout: 8s    #default 10 seconds
        fault:               #fault injection - abort
          abort:
            percent: 10
            httpStatus: 400
      - destination:
          host: reviews
          subset: v2
        weight: 25     # split traffic. 25% to here
        retries:           # attempts * perTryTimeout should be less than 10 seconds(default) or adjusted timeout.
          attempts: 3
          perTryTimeout: 2s
      fault:               #fault injection - delay
        delay:
          percent: 10
          fixedDelay: 5s
...

---
apiVersion:
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
  - match:               #conditional routing: based on source labels
    - sourceLabels:
        app: reviews
        version: v2
    - route:
      - destination:
            host: ratings
            subset: v1
      - destination:
            host: ratings
            subset: v2
